fix(sticker-sheet): update table headings to align to start

--- a/storybook/components/StickerSheet/components/StickerSheetTableHeading/StickerSheetTableHeading.module.scss
+++ b/storybook/components/StickerSheet/components/StickerSheetTableHeading/StickerSheetTableHeading.module.scss
@@ -4,7 +4,7 @@
 
 .stickerSheetTableHeading {
   padding: $spacing-sm;
-  text-align: left;
+  text-align: start;
   font-family: $typography-heading-5-font-family;
   font-weight: $typography-heading-5-font-weight;
   font-size: $typography-heading-5-font-size;
